Keycloack oauth2 authentication

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 spring.application.name=apiGateway
 server.port=8090
+
+keycloak.auth.set.jwt-uri=http://localhost:8091/realms/ticketing-security-realm/protocol/openid-connect/certs
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri= http://localhost:8091/realms/ticketing-security-realm
+
