CircuitBreaker + openAPI Implementation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,34 @@ server.port=8090
 keycloak.auth.set.jwt-uri=http://localhost:8091/realms/ticketing-security-realm/protocol/openid-connect/certs
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri= http://localhost:8091/realms/ticketing-security-realm
 
+spring.excluded.urls= /api-docs, /swagger-ui.html, /v3/api-docs, /swagger-ui/**, /actuator/**
+
+#Acuator
+management.health.circuitbreaker.enabled=true
+
+#expose all endpoints
+management.endpoints.web.exposure.include=*
+management.endpoints.health.show-details=always
+
+#Resilience4J properties
+resilience4j.circuitbreaker.instances.default.registerHealthIndicator=true
+resilience4j.circuitbreaker.instances.default.slidingWindowSize=10
+resilience4j.circuitbreaker.instances.default.minimumNumberOfCalls=5
+resilience4j.circuitbreaker.instances.default.permittedNumberOfCallsInHalfOpenState=3
+resilience4j.circuitbreaker.instances.default.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.default.waitDurationInOpenState=5s
+resilience4j.circuitbreaker.instances.default.slidingWindowType=COUNT_BASED
+resilience4j.circuitbreaker.instances.default.automaticTransitionFromOpenToHalfOpenEnabled=true
+
+resilience4j.timileLimiter.configs.default.timeoutDuration=3s
+resilience4j.retry.configs.default.maxAttempts=3
+resilience4j.retry.configs.default.waitDuration=2s
+
+#openApi
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.urls[0].name=Inventory Services
+springdoc.swagger-ui.urls[0].url=docs/inventoryServices/v3/api-docs
+springdoc.swagger-ui.urls[1].name=Booking Services
+springdoc.swagger-ui.urls[1].url=docs/bookingServices/v3/api-docs
+
